collapsabel table transaction fixed

--- a/client/style/subcomponents/transactions.scss
+++ b/client/style/subcomponents/transactions.scss
@@ -1,34 +1,54 @@
+.transactiondetailbutton {
+	font-size:15px;
+	text-align:center;
+}
+
+
+.tablelineoverflow {
+	max-width:0px;
+}
+
+.iscollapsed {
+	background-color:rgb(195, 202, 226);
+}
+
+.layoutfixed {
+	/*table-layout:fixed;	*/
+	font-size:12px;
+	width:650px;
+}
 
 .allsmallpie {
-	width: 100px;
+	width: 700px;
 	display:inline;
 	float:left;
+	margin-left:15px;
+	margin-top:10px;
 }
 
 .alltransactions {
 	float:right;
-	width:400px;
+	width:350px;
 	font-size:12px;
 	margin-right:0px;
+	margin-left:15px;
+	margin-top:13.5px;
+}
+
+.griddletransactions {
+	margin-top:15px;
 }
 
 .maintitleminipie {
-	margin-top:25px;
 	width:200px;
-	margin-left:15px;
-	margin-top:10px;
-	display:inline;
-	font-size:16px;
+	font-size:15px;
 	color:#124A51;
 	font-weight:bold;
 }
 .maintitlealltransactions {
-	margin-top:25px;
 	width:200px;
-	margin-left:40px;
-	margin-top:25px;
 	display:inline;
-	font-size:16px;
+	font-size:15px;
 	color:#124A51;
 	font-weight:bold;
 }
@@ -46,12 +66,14 @@
 }
 
 .transactionsmallpie {
-	height:110px;
+	height: 80px;
+	width: 260px;
+	float:left;
 }
 
 .totalcashinoutt {
 	font-size: 12px;  
-	top:-96%;
+	top:-142%;
 	left:145px;
 	position:relative;
 	line-height:1;
